Fixing column widths in deployments tab, spinner alignment in urls-list

--- a/hawkular-client/less/metrics.less
+++ b/hawkular-client/less/metrics.less
@@ -218,9 +218,13 @@ a:hover .fa-spinner {
     }
   }
   
+  td.state {
+    min-width: 105px;
+  }
+  
   td.actions {
     
-    min-width: 60px;
+    min-width: 95px;
     
     .dropdown {
       position: absolute;
@@ -477,6 +481,11 @@ a:hover .fa-spinner {
     .fa {
       margin-left: 2px;
       vertical-align: inherit;
+    }
+    
+    .spinner {
+      margin-bottom: 7px;
+      margin-top: 5px;
     }
   }
 
